musica (2.27) unreleased; urgency=medium

  * UNRELEASED

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sat, 26 Jul 2014 14:57:06 -0500

musica (2.26-0ubuntu1) utopic; urgency=medium

  * index.php:
    - fix syntax error
    - handle new location of getid3.php
    - add support for a random playlist of 200 songs
    - don't sort random playlist
  * jplayer.php:
    - let's autoplay

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sat, 26 Jul 2014 14:57:04 -0500

musica (2.25-0ubuntu1) utopic; urgency=medium

  * debian/cron.hourly:
    - name our temp directory
    - use a trap to clean up temp file

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 28 Apr 2014 09:52:59 -0700

musica (2.24-0ubuntu1) trusty; urgency=medium

  * debian/apache.conf => debian/musica.conf, debian/control,
    debian/install, debian/links, debian/postinst, debian/postrm:
    - bump standards version
    - fix package installations for LP: #1244293, #990900

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sat, 15 Mar 2014 21:16:03 -0500

musica (2.23-0ubuntu1) trusty; urgency=low

  * debian/postrm: LP: #1244293, #990900
    - purging might break, if site was already disabled

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sat, 15 Mar 2014 11:20:11 -0500

musica (2.22-0ubuntu1) raring; urgency=low

  * debian/postinst:
    - note the musica cache rebuild with an echo
    - don't background this (ie, block on it completing)
    - musica is not really functional until the index has run
  * debian/cron.hourly:
    - soften to a warning, exit zero when music dir doesn't exist
  * debian/control:
    - bump standards
  * debian/control, debian/rules:
    - switch to simpler dh build
  * debian/control, debian/copyright:
    - fix lintian warnings

 -- Dustin Kirkland <kirkland@ubuntu.com>  Wed, 31 Oct 2012 17:29:49 +0100

musica (2.21-0ubuntu1) precise; urgency=low

  * debian/cron.hourly: LP: #888218
    - exit on errors

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 10 Nov 2011 15:34:41 -0600
